# task

./: .gitignore  CMakeLists.txt
src/: generator.cpp  generator.h  main.cpp  object.cpp  object.h  shared_buffer.h  sorter.cpp  sorter.h
test/: CMakeLists.txt  tests.cpp
